[gd_scene load_steps=6 format=3 uid="uid://c4h46cjlyo4qt"]

[ext_resource type="PackedScene" uid="uid://d776xgt8nd8i" path="res://Scenes/floor.tscn" id="1_tg4xy"]
[ext_resource type="Script" path="res://Scenes/Levels/level_7.gd" id="1_twdix"]
[ext_resource type="PackedScene" uid="uid://b6dbdts3ycfjs" path="res://Scenes/TriangleboxDown.tscn" id="2_7rhvh"]
[ext_resource type="PackedScene" uid="uid://bb864bfhhw1so" path="res://Scenes/loading_zone.tscn" id="3_xic28"]
[ext_resource type="PackedScene" uid="uid://dh031n2t5v3fm" path="res://Scenes/spherebox.tscn" id="4_2qpt1"]

[node name="Level7" type="Node2D"]
script = ExtResource("1_twdix")

[node name="Floor2" parent="." instance=ExtResource("1_tg4xy")]
position = Vector2(2341, 618)
scale = Vector2(1.31243, 1.18921)

[node name="Floor" parent="." instance=ExtResource("1_tg4xy")]
position = Vector2(389, 609)
scale = Vector2(0.68, 1)

[node name="Floor4" parent="." instance=ExtResource("1_tg4xy")]
position = Vector2(303, 27)
scale = Vector2(0.399999, 1)

[node name="TriangleboxUp" parent="." instance=ExtResource("2_7rhvh")]
position = Vector2(446, 515)
rotation = -3.11852

[node name="TriangleboxUp2" parent="." instance=ExtResource("2_7rhvh")]
position = Vector2(1761, 508)
rotation = -3.11852

[node name="Floor3" parent="." instance=ExtResource("1_tg4xy")]
position = Vector2(2037, 72)
rotation = 1.5708

[node name="LoadingZone" parent="." instance=ExtResource("3_xic28")]
position = Vector2(2590, 432)
scale = Vector2(13.0534, 4.4)

[node name="Spherebox" parent="." instance=ExtResource("4_2qpt1")]
position = Vector2(2038, -547)

[connection signal="body_entered" from="LoadingZone" to="." method="_on_loading_zone_body_entered"]
[connection signal="body_exited" from="LoadingZone" to="." method="_on_loading_zone_body_exited"]
